<resources>
    <string name="app_name">Speak My Language</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_language">Add Language</string>
    <string name="enter_language">Enter language</string>
    <string name="add_new_word">Add Word</string>
    <string name="enter_default_word">Deutsch</string>
    <string name="enter_foreign_word">Dari</string>
    <string name="button_add">Add</string>
    <string name="hint">Add your words\nby pressing the \"+\" Button</string>
    <string name="add_language_title">Add language</string>
    <string name="add_word_title">Add Word</string>

</resources>