<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDialogBackground">

    <LinearLayout
        android:id="@+id/addNewWordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/add_word_title"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addForeignWordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_weight="5"
            android:gravity="center_horizontal"
            android:hint="@string/enter_foreign_word"
            android:inputType="textPersonName|textCapWords"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/addDefaultWordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_weight="5"
            android:gravity="center_horizontal"
            android:hint="@string/enter_default_word"
            android:inputType="textPersonName|textCapWords"
            android:textSize="24sp" />

        <Button
            android:id="@+id/addNewWordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/button_add"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>