<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/addNewWordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/add_language_title"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/addLanguageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_weight="5"
                android:layout_gravity="center_horizontal"
                android:hint="@string/enter_language"
                android:inputType="textPersonName|textCapWords"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

        </LinearLayout>



        <Button
            android:id="@+id/addLanguageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:text="@string/button_add"
            android:textAllCaps="false"
            android:textSize="18sp" />


    </LinearLayout>

</RelativeLayout>